[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/star.png" type="Texture" id=1]
[ext_resource path="res://Star.gd" type="Script" id=2]
[ext_resource path="res://assets/star8.png" type="Texture" id=3]

[sub_resource type="ParticlesMaterial" id=3]

[sub_resource type="CanvasItemMaterial" id=2]
next_pass = SubResource( 3 )
blend_mode = 1

[sub_resource type="CircleShape2D" id=1]
radius = 20.7

[sub_resource type="Animation" id=4]
resource_name = "move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.2, 0.2 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[node name="Star" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move = SubResource( 4 )
[connection signal="mouse_entered" from="." to="." method="_on_Star_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Star_mouse_exited"]
